snapshots/onug_cost_optimized_s3_path/aws_configs/accounts/028403472736/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-65f2eb25",
     "NetworkAclId": "acl-02b87c4359be2828b",
     "SubnetId": "subnet-016a46679591e480c"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-02b87c4359be2828b",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0f0d3c242ef614e28"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-09f9f6f9902e7ecb6",
     "NetworkAclId": "acl-0bd27fa2d90706623",
     "SubnetId": "subnet-0ad766863229da529"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0401db715f28d538b",
     "NetworkAclId": "acl-0bd27fa2d90706623",
     "SubnetId": "subnet-0c234372a636ccf5d"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0bd27fa2d90706623",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-it-east"
    }
   ],
   "VpcId": "vpc-0f0d3c242ef614e28"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0dff702e1e46eccd7",
     "NetworkAclId": "acl-0caab0992e074ffcf",
     "SubnetId": "subnet-03c1ff02de1efd932"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0caab0992e074ffcf",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-tgw-it-east"
    }
   ],
   "VpcId": "vpc-0f0d3c242ef614e28"
  }
 ]
}
